terraform/ecs_backend.tf
resource "aws_iam_role" "ecs_execution" {
  name = "ecs-execution-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Effect = "Allow"
      Principal = {
        Service = "ecs-tasks.amazonaws.com"
      }
      Action = "sts:AssumeRole"
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ecs_execution" {
  role       = aws_iam_role.ecs_execution.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

resource "aws_cloudwatch_log_group" "backend" {
  name              = "/ecs/backend"
  retention_in_days = 0
}

resource "aws_ecs_task_definition" "backend" {
  family                   = "backend"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"
  network_mode             = "awsvpc"

  execution_role_arn = aws_iam_role.ecs_execution.arn

  container_definitions = jsonencode([
    {
      name  = "backend"
      image = "ghcr.io/ximaz/ugram/backend:latest"

      repositoryCredentials = {
        credentialsParameter = aws_secretsmanager_secret.ghcr.arn
      }


      portMappings = [{
        containerPort = 8080
      }]

      environment = [
        { name = "POSTGRES_USER", value = var.postgres_user },
        { name = "POSTGRES_PASSWORD", value = var.postgres_password },
        { name = "POSTGRES_DB", value = var.postgres_db },
        { name = "PGHOST", value = aws_db_instance.postgres.address },
        {
          name  = "DATABASE_URL",
          value = "postgresql://${var.postgres_user}:${var.postgres_password}@${aws_db_instance.postgres.address}:5432/${var.postgres_db}?sslmode=verify-full&sslrootcert=/certs/global-bundle.pem"
        },
        { name = "PGSSLMODE", value = "require" },
        { name = "PGSSLREJECTUNAUTHORIZED", value = "0" },

        { name = "REDIS_HOST", value = aws_elasticache_cluster.redis.cache_nodes[0].address },

        { name = "S3_ACCESS_KEY_ID", value = aws_iam_access_key.s3_key.id },
        { name = "S3_SECRET_ACCESS_KEY", value = aws_iam_access_key.s3_key.secret },
        { name = "S3_ENDPOINT", value = "https://s3.${aws_s3_bucket.app_bucket.region}.amazonaws.com" },
        {
          name  = "S3_REGION",
          value = aws_s3_bucket.app_bucket.region
        },
        {
          name  = "S3_BUCKET",
          value = aws_s3_bucket.app_bucket.bucket
        },

        { name = "JWT_SECRET", value = var.jwt_secret },
        { name = "JWT_EXPIRES_IN", value = var.jwt_expires_in },

        { name = "STATIC_ORIGIN", value = "http://${aws_lb.backend.dns_name}" }
      ],

      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.backend.name,
          awslogs-create-group  = true
          awslogs-region        = "us-east-1"
          awslogs-stream-prefix = "ecs"
        }
      }
    }
  ])

  depends_on = [
    aws_db_instance.postgres,
    aws_elasticache_cluster.redis,
    aws_s3_bucket.app_bucket
  ]
}

resource "aws_lb" "backend" {
  name               = "tf-lb-backend"
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb.id]
  subnets            = [aws_subnet.public_a.id, aws_subnet.public_b.id]
}

resource "aws_lb_target_group" "backend" {
  name        = "backend-tg"
  port        = 8080
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_vpc.main.id

  health_check {
    path                = "/health"
    protocol            = "HTTP"
    interval            = 10
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200-299"
  }
}

resource "aws_lb_listener" "backend" {
  load_balancer_arn = aws_lb.backend.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.backend.arn
  }
}

resource "aws_ecs_service" "backend" {
  name            = "backend"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.backend.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    assign_public_ip = false
    subnets          = [aws_subnet.private_a.id, aws_subnet.private_b.id]
    security_groups  = [aws_security_group.ecs.id]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.backend.arn
    container_name   = "backend"
    container_port   = 8080
  }

  deployment_controller {
    type = "ECS"
  }

  depends_on = [aws_lb_listener.backend]
}
